[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marge-mri"
version = "0.0.9"
authors = [
    { name = "José Miguel Algarín", email = "josalggui@i3m.upv.es" },
]
description = "MaRCoS Graphical Environment (MaRGE)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "resources",
    "requests >= 2.25.1",
    "numpy",
    "matplotlib",
    "nibabel",
    "pydicom",
    "scipy",
    "msgpack",
    "PyQt5",
    "pyqtgraph",
    "QDarkStyle",
    "bm4d",
    "phantominator",
    "pyserial",
    "ismrmrd",
    "pypulseq",
    "marga_pulseq",
    "scikit-learn",
    "scikit-image",
    "imageio",
    "h5py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/marge"]

[tools.setuptools]
include-package-data = true
