[metadata]
name = marge-mri-example
version = 0.0.1
author = Nihal Ouahabi
author_email = nihal@example.com
description = A small example package for packaging tutorial
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/Nihalouahabi/example_package_nihal
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
